--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -172,13 +172,64 @@
 
       <section id="gallery">
         <h1>Gallery</h1>
+        <div class="searchBar">
+          <input
+            type="text"
+            placeholder="Search Cursors"
+            class="cursors-input"
+          />
+          <button class="search-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </div>
+
         <div class="cursors">
           <div class="cursor-card">
-            <img src="/images/cursors1.png" alt="" />
+            <img src="/images/cursors1.png" alt="" class="card-img" />
             <p><a href="">Meyerholtian Cursors</a></p>
+          </div>
+          <div class="cursor-card">
+            <img src="/images/cusor2.png" alt="" class="card-img" />
+            <p><a href="">Eaten Cursors Cursors</a></p>
+          </div>
+          <div class="cursor-card">
+            <img src="/images/cursors3.png" alt="" class="card-img" />
+            <p><a href="">Flashy Glass Cursors</a></p>
+          </div>
+          <div class="cursor-card">
+            <img src="/images/cursors4.png" alt="" class="card-img" />
+            <p><a href="">Watermelon V1 Cursors</a></p>
+          </div>
+          <div class="cursor-card">
+            <img src="/images/cursors5.png" alt="" class="card-img" />
+            <p><a href="">One Drive V1 Cursors</a></p>
+          </div>
+          <div class="cursor-card">
+            <img src="/images/cursors6.png" alt="" class="card-img" />
+            <p><a href="">Mob Psycho 100 Cursors</a></p>
+          </div>
+          <div class="cursor-card">
+            <img src="/images/cursors7.png" alt="" class="card-img" />
+            <p><a href="">Dark Purple Metallc Cursors</a></p>
+          </div>
+          <div class="cursor-card">
+            <img src="/images/cursors9.png" alt="" class="card-img" />
+            <p><a href="">Cht GPT Cursors</a></p>
           </div>
         </div>
       </section>
     </main>
+
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Contact</li>
+        <li>Terms Of Service</li>
+        <li>Sitemap</li>
+        <li>News Feed</li>
+      </ul>
+
+      <p>Copyright &copy; 2024. Moon Studios</p>
+    </footer>
   </body>
 </html>
